--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <body>
         <canvas id="game" width=640 height=360></canvas>
         <script src="Script/Asset.js"></script>
+        <script src="Script/Const.js"></script>
         <script src="Script/Var.js"></script>
 
         <script src="Script/FunctionPhysics.js"></script>
